<resources>
    <string name="app_name" translatable="false">Resplash</string>
    <string name="package_name" translatable="false">com.b_lam.resplash</string>
    <string name="unsplash" translatable="false">Unsplash</string>
    <string name="unsplash_url" translatable="false">https://unsplash.com/?utm_source=resplash&amp;utm_medium=referral&amp;utm_campaign=api-credit</string>
    <string name="unsplash_authed_submit_url" translatable="false">https://unsplash.com/submit</string>
    <string name="unsplash_unauthed_submit_url" translatable="false">https://unsplash.com/?modal=%7B%22tag%22%3A%22Login%22%2C%22value%22%3A%7B%22tag%22%3A%22SubmitAPhoto%22%2C%22value%22%3A%7B%7D%7D%7D</string>
    <string name="unsplash_join_url" translatable="false">https://unsplash.com/join</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <plurals name="photos">
        <item quantity="one">%d Photo</item>
        <item quantity="other">%d Photos</item>
    </plurals>
    <string name="collections">Collections</string>
    <string name="like">Like</string>
    <string name="users">Users</string>
    <string name="unknown">Unknown</string>
    <string name="download">Download</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="apply">Apply</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thanks">Thanks!</string>
    <string name="download_started">Download started</string>
    <string name="download_complete">Download complete</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="setting_wallpaper">Setting wallpaper…</string>
    <string name="file_exists_title">Download again?</string>
    <string name="file_exists_message">This photo has already been downloaded. Do you want to download this photo again?</string>
    <string name="sponsored">Sponsored</string>
    <string name="home">Home</string>
    <string name="header_subtitle">Powered by creators everywhere</string>
    <string name="add_account">Add account</string>
    <string name="view_profile">View profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="sort_by">Sort By</string>
    <string name="order_latest">Latest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_popular">Popular</string>
    <string name="order_all">All</string>
    <string name="order_featured">Featured</string>
    <string name="oops">Oops, something went wrong…</string>
    <string name="empty_state_title">Nothing to see here…</string>
    <string name="error_state_title">Uh oh…</string>
    <string name="error_setting_wallpaper">Something went wrong while setting the wallpaper…</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_size">Cache size: %d MB</string>
    <string name="language">Language</string>
    <string name="language_default" translatable="false">Follow system</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_arabic" translatable="false">Arabic</string>
    <string name="language_chinese" translatable="false">Chinese</string>
    <string name="language_croatian" translatable="false">Croatian</string>
    <string name="language_czech" translatable="false">Czech</string>
    <string name="language_german" translatable="false">German</string>
    <string name="language_hungarian" translatable="false">Hungarian</string>
    <string name="language_indonesian" translatable="false">Indonesian</string>
    <string name="language_italian" translatable="false">Italian</string>
    <string name="language_japanese" translatable="false">Japanese</string>
    <string name="language_portuguese" translatable="false">Portuguese</string>
    <string name="language_russian" translatable="false">Russian</string>
    <string name="language_serbian" translatable="false">Serbian</string>
    <string name="language_spanish" translatable="false">Spanish</string>
    <string name="language_taiwanese" translatable="false">Taiwanese</string>
    <string name="language_thai" translatable="false">Thai</string>
    <string name="language_turkish" translatable="false">Turkish</string>
    <string name="language_ukrainian" translatable="false">Ukrainian</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_battery">Set by Battery Saver</string>
    <string name="theme_default">System default</string>
    <string name="layout">Layout</string>
    <string name="layout_default">Default</string>
    <string name="layout_minimal">Minimal</string>
    <string name="layout_grid">Grid</string>
    <string name="downloader">Downloader</string>
    <string name="downloader_default">Resplash downloader</string>
    <string name="downloader_system">System downloader</string>
    <string name="quality">Quality</string>
    <string name="quality_raw">Raw</string>
    <string name="quality_full">Full</string>
    <string name="quality_regular">Regular</string>
    <string name="quality_small">Small</string>
    <string name="quality_thumb">Thumb</string>
    <string name="load_quality">Load Quality</string>
    <string name="download_quality">Download Quality</string>
    <string name="wallpaper_quality">Wallpaper Quality</string>
    <string name="long_press_to_download">Long press to download</string>
    <string name="long_press_to_download_summary">Long press on a photo to start downloading</string>
    <string name="auto_wallpaper_title">Auto Wallpaper</string>
    <string name="auto_wallpaper_info">Auto Wallpaper will refresh your device with a new random wallpaper based on the set conditions</string>
    <string name="auto_wallpaper_help_title">Not Working?</string>
    <string name="auto_wallpaper_conditions_title">Conditions</string>
    <string name="auto_wallpaper_on_wifi_title">On Wi-Fi</string>
    <string name="auto_wallpaper_on_wifi_summary">Device must be connected to a Wi-Fi network</string>
    <string name="auto_wallpaper_charging_title">Charging</string>
    <string name="auto_wallpaper_charging_summary">Device must be connected to a power source</string>
    <string name="auto_wallpaper_idle_title">Idle</string>
    <string name="auto_wallpaper_idle_summary">Device must be inactive</string>
    <string name="auto_wallpaper_interval_title">Interval</string>
    <string name="auto_wallpaper_interval_summary">Change wallpaper every: %s</string>
    <string name="auto_wallpaper_source">Source</string>
    <string name="auto_wallpaper_source_title">Wallpaper Source</string>
    <string name="auto_wallpaper_source_summary">Current source: %s</string>
    <string name="auto_wallpaper_collections_summary">Select the collections to get photos from</string>
    <string name="auto_wallpaper_user_title">User Photos</string>
    <string name="auto_wallpaper_user_summary">Using photos from: \@%s</string>
    <string name="auto_wallpaper_user_dialog_message">Enter the username of the user to get photos from:</string>
    <string name="auto_wallpaper_search_terms_title">Search Terms</string>
    <string name="auto_wallpaper_search_terms_dialog_message">Get photos matching the following search terms:</string>
    <string name="auto_wallpaper_options_title">Options</string>
    <string name="auto_wallpaper_crop_title">Wallpaper Crop</string>
    <string name="auto_wallpaper_notification_settings_title">Notification Settings</string>
    <string name="auto_wallpaper_show_notification_title">Show Notification</string>
    <string name="auto_wallpaper_persist_notification_title">Persist Notification</string>
    <string name="auto_wallpaper_persist_notification_summary">Always show the current wallpaper notification</string>
    <string name="auto_wallpaper_show_notification_summary">Get a notification with the current wallpaper info</string>
    <string name="auto_wallpaper_portrait_mode_only_title">Device Orientation Fix</string>
    <string name="auto_wallpaper_portrait_mode_only_summary">Some devices will crop the wallpaper incorrectly if it is set while the device is in landscape mode, checking this will reschedule the task until the device is in portrait mode</string>
    <string name="auto_wallpaper_select_screen_title">Select Screen</string>
    <string name="auto_wallpaper_select_screen_summary">Apply wallpaper to: %s</string>
    <string name="auto_wallpaper_orientation_title">Orientation</string>
    <string name="auto_wallpaper_orientation_summary">Limit the wallpaper orientation to: %s</string>
    <string name="auto_wallpaper_content_filter_title">Content Filter</string>
    <string name="auto_wallpaper_content_filter_note">Note that we can’t guarantee that all potentially unsuitable content is removed</string>
    <string name="auto_wallpaper_history_title">Auto Wallpaper History</string>
    <string name="auto_wallpaper_history_summary">View previously set wallpapers</string>
    <string name="auto_wallpaper_add_to_auto_wallpaper">Add to Auto Wallpaper</string>
    <string name="auto_wallpaper_remove_from_auto_wallpaper">Remove from Auto Wallpaper</string>
    <string name="make_collection_private">Make collection private</string>
    <string name="collection_name_hint">Name</string>
    <string name="collection_description_hint">Description (optional)</string>
    <string name="edit_collection">Edit collection</string>
    <string name="upgrade_to_resplash_pro">Upgrade to Resplash Pro</string>
    <string name="support_development">Support development</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="unsplash_summary">The internet’s source of freely-usable images</string>
    <string name="donate_summary">If you really like Resplash, consider supporting its development by sending me a couple of dollars</string>
    <string name="report_bug_title">Report Bug</string>
    <string name="report_bug_summary">Report bugs or request new features</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_summary">If you like Resplash, rate it on the Google Play Store</string>
    <string name="github_title" translatable="false">GitHub</string>
    <string name="github_summary">Resplash is open-source, check it out on GitHub</string>
    <string name="github_url" translatable="false">https://github.com/b-lam/Resplash</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.b_lam.resplash</string>
    <string name="github_issues_url" translatable="false">https://github.com/b-lam/Resplash/issues</string>
    <string name="developer_title">Developer</string>
    <string name="developer_unsplash_username" translatable="false">\@brandon_lam</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="developer_instagram_username" translatable="false">\@brandon.c.lam</string>
    <string name="developer_instagram_url" translatable="false">https://www.instagram.com/brandon.c.lam/</string>
    <string name="developer_unsplash_url" translatable="false">https://unsplash.com/@brandon_lam</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://github.com/b-lam/Resplash/blob/master/PRIVACY.md</string>
</resources>